# xg

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  build_vs2017.cmd  build_vs2019.cmd  build_vs2022.cmd
android/: common.cmake
android/hello_world/: build.gradle
android/hello_world/app/: build.gradle
android/hello_world/app/src/androidTest/java/com/xg/helloworld/: ExampleInstrumentedTest.kt
android/hello_world/app/src/main/: AndroidManifest.xml
android/hello_world/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/hello_world/app/src/main/java/com/xg/helloworld/: MainActivity.kt
android/hello_world/app/src/test/java/com/xg/helloworld/: ExampleUnitTest.kt
android/hello_world/gradle/wrapper/: gradle-wrapper.properties
android/triangle/: settings.gradle
android/triangle/app/: build.gradle
android/triangle/app/src/androidTest/java/com/xg/triangle/: ExampleInstrumentedTest.kt
android/triangle/app/src/main/: AndroidManifest.xml
android/triangle/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/triangle/app/src/main/java/com/xg/triangle/: MainActivity.kt
android/triangle/app/src/main/res/values/: strings.xml  themes.xml
android/triangle/app/src/main/res/values-night/: themes.xml
android/triangle/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt
app/change_layout/: CMakeLists.txt  change_layout.cc  change_layout.h  main.cc
app/change_layout/layouts/: change_layout0.xml  change_layout1.xml
app/embed_layout/: CMakeLists.txt  embed_layout.cc  embed_layout.h  main.cc
app/embed_layout/layouts/: embed_layout.xml
app/headless/: CMakeLists.txt  headless.cc  headless.h  main.cc
app/headless/layouts/: headless.xml
app/hello_reality/: CMakeLists.txt  hello_reality.cc  hello_reality.h  main.cc
app/hello_reality/layouts/: hello_reality.xml
app/hello_world/: CMakeLists.txt  hello_world.cc  hello_world.h  main.cc
app/hello_world/layouts/: hello_world.xml
app/multiview/: CMakeLists.txt  main.cc  multiview.cc  multiview.h
app/multiview/layouts/: multiview.xml
app/multiview/shaders/: multiview.frag  multiview.vert
app/multiwin/: CMakeLists.txt  main.cc  multiwin.cc  multiwin.h
app/multiwin/layouts/: multiwin.xml
app/multiwin/shaders/: multiwin.frag
app/overlay/: CMakeLists.txt  main.cc  overlay.cc  overlay.h
app/overlay/images/: texture.ktx
app/overlay/layouts/: overlay.xml
app/overlay/shaders/: overlay.vert
app/render_to_skybox/: CMakeLists.txt  main.cc  render_to_skybox.cc  render_to_skybox.h
app/render_to_skybox/layouts/: render_to_skybox.xml
app/render_to_skybox/shaders/: cubemap.frag  cubemap.vert  skybox.vert
app/serialize_layout/: CMakeLists.txt  main.cc  serialize_layout.cc  serialize_layout.h
app/serialize_layout/layouts/: serialize_layout.xml
app/serialize_layout/shaders/: serialize_layout.vert
app/skybox/: CMakeLists.txt  main.cc  skybox.cc  skybox.h
app/skybox/layouts/: skybox.xml
app/skybox/shaders/: skybox.frag
app/triangle/: CMakeLists.txt  main.cc  triangle.cc  triangle.h
app/triangle/layouts/: triangle.xml
app/triangle/shaders/: triangle.frag  triangle.vert
src/: CMakeLists.txt
src/xg/: CMakeLists.txt  buffer.h  buffer_loader.cc  buffer_loader.h  camera.cc  camera.h  command.cc  command.h  command_buffer.h  command_pool.h  composition_layer_projection.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  device.h  engine.cc  engine.h  event.h  factory.cc  factory.h  fence.h  font_loader.cc  font_loader.h  framebuffer.h  frustum.cc  frustum.h  image.h  image_loader.cc  image_loader.h  image_loader_stb.cc  image_view.h  layout.cc  layout.h  logger.h  logger_spdlog.cc  overlay.h  overlay_imgui.cc  overlay_imgui.h  parser.h  pipeline.h  (+37 more)
src/xg/openxr/: CMakeLists.txt  composition_layer_projection_xr.cc  composition_layer_projection_xr.h  reality_viewer_xr.cc  reality_viewer_xr.h  reality_xr.cc  reality_xr.h  reference_space_xr.cc  reference_space_xr.h  session_xr.cc  session_xr.h  swapchain_xr.cc  swapchain_xr.h  system_xr.cc  system_xr.h
src/xg/parser/: expression_exprtk.cc  parser.cc  parser_acquire_next_image.cc  parser_attachment.cc  parser_base.cc  parser_begin_render_pass.cc  parser_bind_descriptor_sets.cc  parser_bind_index_buffer.cc  parser_bind_pipeline.cc  parser_bind_vertex_buffers.cc  parser_blit_image.cc  parser_buffer.cc  parser_buffer_loader.cc  parser_buffer_memory_barrier.cc  parser_camera.cc  parser_color_attachment.cc  parser_color_blend_state.cc  parser_command_buffer.cc  parser_command_context.cc  parser_command_group.cc  parser_command_list.cc  parser_command_pool.cc  parser_compute_pipeline.cc  parser_constant.cc  parser_copy_buffer.cc  parser_data.cc  parser_dependency.cc  parser_depth_stencil_attachment.cc  parser_depth_stencil_state.cc  parser_descriptor.cc  parser_descriptor_buffer_info.cc  parser_descriptor_image_info.cc  parser_descriptor_pool.cc  parser_descriptor_set.cc  parser_descriptor_set_layout.cc  parser_descriptor_set_layout_binding.cc  parser_device.cc  parser_dispatch.cc  parser_draw.cc  parser_draw_indexed.cc  (+57 more)
src/xg/parser/reality/: parser_composition_layer_projection.cc  parser_end_frame.cc  parser_locate_space.cc  parser_locate_views.cc  parser_reality.cc  parser_reality_viewer.cc  parser_reference_space.cc  parser_session.cc  parser_system.cc  parser_view.cc
src/xg/schema/: layout.xsd
src/xg/vulkan/: CMakeLists.txt  buffer_vk.cc  buffer_vk.h  command_buffer_vk.cc  command_buffer_vk.h  command_pool_vk.cc  command_pool_vk.h  descriptor_pool_vk.cc  descriptor_pool_vk.h  descriptor_set_layout_vk.cc  descriptor_set_layout_vk.h  descriptor_set_vk.cc  descriptor_set_vk.h  device_vk.cc  device_vk.h  event_vk.cc  event_vk.h  fence_vk.cc  fence_vk.h  framebuffer_vk.cc  framebuffer_vk.h  image_view_vk.cc  image_view_vk.h  image_vk.cc  image_vk.h  overlay_vk.cc  overlay_vk.h  pipeline_layout_vk.cc  pipeline_layout_vk.h  pipeline_vk.cc  pipeline_vk.h  query_pool_vk.cc  query_pool_vk.h  queue_vk.cc  queue_vk.h  render_pass_vk.cc  render_pass_vk.h  renderer_vk.cc  renderer_vk.h  sampler_vk.cc  (+10 more)
(+1 files in other folders)
