add_subdirectory(triangle)
add_subdirectory(hello_world)
add_subdirectory(multiview)
add_subdirectory(multiwin)
add_subdirectory(headless)
add_subdirectory(serialize_layout)
add_subdirectory(skybox)
add_subdirectory(render_to_skybox)
add_subdirectory(overlay)

if (XG_ENABLE_XR)
    add_subdirectory(hello_reality)
endif()
